2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/README.browser-plugin: Link to a page will _all_
	the Quicktime plugin embed parameters
	* browser-plugin/tests/2.html: Add some Don Quixote text to allow
	use to test bug #343067
	* browser-plugin/totemPlugin.cpp: Slight change of behaviour to
	get the old behaviour back when using NPN_GetURL

2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemConePlaylist.cpp: Implement Playlist::isplaying,
	(Closes: #526737)
	* browser-plugin/totemNarrowSpacePlugin.cpp: Fix GetPluginStatus()
	to return the status in the same form QT callers are expecting

2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Hide the controls by
	default in the VLC plugin (Closes: #526738)

2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* browser-plugin/totemComplexPlayer.cpp:
	* browser-plugin/totemComplexPlayer.h:
	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemComplexPlugin.h:
	* browser-plugin/totemNPObject.h:
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPluginGlue.cpp:
	Make the Complex plugin compile again... (Closes: #535820)

2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/TODO: Remove already done TODO items
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle): Even when giosrc is
	available, use the local filename if it's available, works around
	early giosrc bugs

2008-06-02  Bastien Nocera  <hadess@hadess.net>

	* src/totem-subtitle-encoding.c (subtitle_encoding_init),
	(subtitle_encoding_get_charset), (subtitle_encoding_create_store):
	Don't remove encodings that can't pass through ASCII, as UTF-16 and
	UTF-32 certainly won't pass through, spotted by Christian Persch
	<chpe@gnome.org> (Closes: #535823)

2008-05-31  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c
	(totem_embedded_update_title), (totem_pl_item_free),