@@ -1,3 +1,8 @@
+2008-06-10  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plugins/mythtv/totem-mythtv.c (totem_mythtv_plugin_finalize),
+	(impl_deactivate): Kill some more stuff on plugin exit
+
 2008-06-09  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/README.browser-plugin: Link to a page will _all_
